# TakeABreak

./: CHANGELOG.md  CMakeLists.txt  INSTALL  README  README.md  TakeABreak.sh  genere_distrib.sh  job_scalability_igrida.sh
distrib/: make_TakeABreak_zip.sh
distrib/TakeABreak/: CMakeLists.txt  INSTALL  TakeABreak.sh
distrib/TakeABreak/data/: toy_example.fasta
distrib/TakeABreak/doc/: user_manual_TakeABreak.txt
distrib_hasbeen/TakeABreak/: INSTALL
doc/: user_manual_TakeABreak.txt
include/: DBGWalker.hpp  LCS.hpp  Read2SV.hpp  Solution.hpp  Solution2.hpp  TakeABreak.hpp
scalability/: aphid_662451seq-scalability.txt
scripts/jenkins/: tool-takeabreak-build-debian7-64bits-gcc-4.7.sh  tool-takeabreak-build-macos-10.9.5-gcc-4.2.1.sh  tool-takeabreak-release-debian.sh
src/: DBGWalker.cpp  LCS.cpp  LCS.hpp  Solution.cpp  Solution2.cpp  TakeABreak.cpp  TakeABreak.hpp  main.cpp
tests/: modifs-cmake.txt  run-tests.sh  simple_test.sh  testClavette.cpp  test_DBGWalker_texas_ranger.cpp
tests/data/: toy_example_with_inv.fasta
tests/gold/: test1.h5  test1.h5.info  test1.out  test2.fasta  test2.out  test3.fasta  test3.h5.REMOVED.git-id  test3.h5.info  test3.out  test4.out  test5.fasta  test5.out  test6.out
tests/scalability/: README  aphid_400000-scalability.txt  scalability.ps
